Fix ethos alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -726,18 +726,17 @@ footer {
   .ethos-box {
     color: #fcfbfb;
     text-align: left;
-    padding: 0;
     flex: 1;
+    padding: 0 25px 0 25px;
   }
 
   .ethos-box p {
-    padding: 0;
+    /* padding: 0 0 0 20px; */
   }
   
   #ethos-container>.ethos-box>h1 {
     font-size: 275%;
     line-height: 135%;
-    padding: 0em 1.2em;
     margin: 0 0 0 0;
   }
 
